--- a/src/components/portfolioHighlights.astro
+++ b/src/components/portfolioHighlights.astro
@@ -30,7 +30,7 @@ highlights.forEach(name => {
 ---
 
 <!-- Portfolio highlights component -->
-<SiteGridContent classItems="portfolio wrap">
+<SiteGridContent classItems="portfolio wrap" options={{ maxWidth: '1200px' }}>
     {
         items.map(async (item, i2) => {
             var target = '_blank'
