--- a/src/styles/components/defaultInputs.scss
+++ b/src/styles/components/defaultInputs.scss
@@ -122,6 +122,24 @@ optgroup {
 
 // Input types
 input {
+    // // Text input styling
+    // &[type="text"],
+    // &[type="password"],
+    // &[type="email"],
+    // &[type="search"],
+    // &[type="tel"],
+    // &[type="url"],
+    // &[type="number"],
+    // &[type="date"],
+    // &[type="datetime-local"],
+    // &[type="month"],
+    // &[type="time"],
+    // &[type="week"] {
+    //     @include defaultStyles();
+    //     @include mainStyles();
+    //     @include textStyles();
+    // }
+
     // Checkbox styling
     &[type="checkbox"] {
         @include defaultStyles();
