--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -25,7 +25,7 @@ export function getStaticPaths() {
 
 // Data loading and processing
 // Get post ID from URL parameters
-const { id: postId } = Astro.params;
+const { id: postId = '' } = Astro.params;
 
 // Load authors
 import authors from '../../lib/authors'
@@ -34,7 +34,7 @@ import authors from '../../lib/authors'
 const currentPost = findPostById(postId);
 
 if (!currentPost) {
-    throw new Error(`Post with id '${postId}' not found`);
+    return Astro.redirect('/404');
 }
 
 // Get author information
